fix download link spacing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -604,7 +604,8 @@ a:visited {
 	}
 	i {
 		font-size: 16px;
-		margin-left: 10px;
+		margin-left: auto;
+		padding-left: 10px;
 		padding-top: 3px;
 	}
 	&.eth,
